--- a/android/app/src/main/res/values/color.xml
+++ b/android/app/src/main/res/values/color.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="lightCanvas">#6750A4</color>
+    <color name="lightCanvas">#19366c</color>
 </resources>
